--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
    
 <!--- CONTENIDO -->  
 <div class="container-flow bg-dark text-white"  id="inicio">
-<h2>CMI 19</h2>
+<h2>CMI 21</h2>
+<p> Holaaa, soy ArtdeKai ejej. </p>
+  
 <h6 class="text-white"> Descripción: Proyecto de Creación Multimedia Interactiva </h6>
 </div>
 
